# proposal

./: .gitignore  Dockerfile  README.md  docker-image.yml  requirements.txt
.github/workflows/: publish-go.yaml  publish-py.yaml  publish-rust.yaml  publish.yaml
app/: main.py
go_site/: Dockerfile  go.mod  go.sum  main.go  main_test.go
py_site/: .coverage  Dockerfile  requirements.txt
py_site/app/: main.py  test_main.py
py_site/app/templates/: index.html
rust_site/: Cargo.toml  Dockerfile
rust_site/src/: lib.rs  main.rs
rust_site/src/static/: index.html
rust_site/tests/: integrated_tests.rs
