[package]
name = "rust_site"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.4.0"
actix-web-prom = "0.7.0"
prometheus = "0.13.3"
rand = "0.8.5"
serde = { version="1.0.193", features = ["derive"] }
serde_json = "1.0.108"
